--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </ul>
         </div>
     </section>
-
+    <img src="imagesEtVideos/routeSuperInfer.mp4">
     <footer>
         <div class="partiesFooter">
             <div class="descriptionRapide">
