--- a/index.html
+++ b/index.html
@@ -193,7 +193,10 @@
             </ul>
         </div>
     </section>
-    <img src="imagesEtVideos/routeSuperInfer.mp4">
+    <video autoplay muted loop class="background-video">
+      <source src="imagesEtVideos/routeSuperInfer.mp4" type="video/mp4">
+      Ton navigateur ne supporte pas la vidéo.
+    </video>
     <footer>
         <div class="partiesFooter">
             <div class="descriptionRapide">
